# TTT

./: .main.cpp.swp  CMakeLists.txt  README.md  XY.txt  XY1.txt  build  main.cpp  settings.config
include/: QuickTools.h
lib/: _Tools.cpp
make/: CMakeCache.txt  Makefile  TTT  cmake_install.cmake
